// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execute button fullfiled request 1`] = `
<ExecuteButton
  data={
    Array [
      Object {
        "connection_status": "connected",
        "executor_id": "722ec903-f4b5-4b1f-9c2f-23fc7b0ba390",
        "executor_name": "Satellite 1 (connected)",
        "executor_type": "satellite",
        "system_count": 1,
      },
      Object {
        "connection_status": "no_executor",
        "executor_id": null,
        "executor_name": null,
        "executor_type": null,
        "system_count": 4,
      },
    ]
  }
  getConnectionStatus={[Function]}
  getEndpoint={[Function]}
  isDisabled={false}
  isLoading={true}
  issueCount={1}
  remediationId="id"
  sources={
    Object {
      "data": Object {},
    }
  }
  status="fullfiled"
>
  <Button
    onClick={[Function]}
  >
    <button
      aria-disabled={false}
      aria-label={null}
      className="pf-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-1"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe={true}
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button"
    >
      Execute playbook
    </button>
  </Button>
</ExecuteButton>
`;

exports[`Execute button pending request 1`] = `
<ExecuteButton
  data={Array []}
  getConnectionStatus={[Function]}
  isDisabled={false}
  isLoading={true}
  issueCount={1}
  remediationId="id"
  sources={
    Object {
      "data": Object {},
    }
  }
  status="pending"
>
  <Button
    onClick={[Function]}
  >
    <button
      aria-disabled={false}
      aria-label={null}
      className="pf-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-2"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe={true}
      disabled={false}
      onClick={[Function]}
      role={null}
      type="button"
    >
      Execute playbook
    </button>
  </Button>
</ExecuteButton>
`;
